--- a/djangoprojects/templates/calculatorapp/index.html
+++ b/djangoprojects/templates/calculatorapp/index.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!doctype html>
 <html lang="en">
   <head>
@@ -28,9 +29,10 @@
       </div>
     </nav>
 
-    <div class="containaer-fliud">
+    <div class="containaer-fliud" style="margin-bottom: 20rem;">
       <div class="row">
         <div class="col-md-6" style="margin: 1rem auto 0 auto;">
+          <img class="img-fluid" src="{% static 'main.jpg' %}">
           <div class="card">
             <div class="card-body">
               <form method="get" action="#">
@@ -48,7 +50,7 @@
     
     <div class="containaer-fliud">
       <div class="row">
-        <footer class="fixed-bottom navbar-light">
+        <footer class="fixed-bottom navbar-light"  style="background: black; color: white; text-align: center;">
           <p>Footer</p>
         </footer>
       </div>
