--- a/djangoprojects/templates/calculatorapp/index.html
+++ b/djangoprojects/templates/calculatorapp/index.html
@@ -73,10 +73,10 @@
               </div>
               <div class="row">
                 <div class="col-md-6">
-                  <input type="submit" class="btn btn-success" style="display: block; margin: 0 auto;">
+                  <input type="submit" class="btn btn-success" style="display: block; margin: 0 auto; margin-top: 10px;" >
                 </div>
                 <div class="col-md-6">
-                  <input type="reset" class="btn btn-danger" style="display: block; margin: 0 auto;">
+                  <input type="reset" class="btn btn-danger" style="display: block; margin: 0 auto; margin-top: 10px;">
                 </div>
               </div>
             </form>
@@ -91,7 +91,7 @@
         </p>
         <hr>
         <p class="lead" style="text-align: center;">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus non ab praesentium deserunt in. Animi.
+          A Simple Calculator created by Django and HTML and Bootstrap
         </p>
       </div>
     </div>
